# Klassenkampf

./: .gitmodules  Sutj proekta i oçenka objoma rabot.txt  TODO_list.txt
docs/: O Teksturah.txt  O dekaläh.txt  O razmerah.txt  O sozdanii kontenta - segmentah urovnej.txt  Ob oprimizaçii postrojenija objema klasterov.txt  Zametki po renderingu.txt
src/: CMakeLists.txt  CameraController.cpp  CameraController.hpp  Host.cpp  Host.hpp  Image.cpp  Rand.cpp  Rand.hpp  SystemEvent.cpp  SystemEvent.hpp  SystemWindow.cpp  SystemWindow.hpp  TextOut.cpp  TextOut.hpp  WindowVulkan.cpp  WindowVulkan.hpp  WorldGenerator.cpp  WorldGenerator.hpp  WorldRenderer.cpp  WorldRenderer.hpp  matrix.cpp  matrix.hpp  plane.hpp  vec.hpp
src/Common/: CMakeLists.txt  MemoryMappedFile.cpp  MemoryMappedFile.hpp  SegmentModelFormat.cpp  SegmentModelFormat.hpp
src/Game/: AmbientOcclusionCalculator.cpp  AmbientOcclusionCalculator.hpp  Assert.hpp  CMakeLists.txt  CameraController.cpp  CameraController.hpp  ClusterVolumeBuilder.cpp  ClusterVolumeBuilder.hpp  CommandsProcessor.cpp  CommandsProcessor.hpp  Console.cpp  Console.hpp  DDSImage.cpp  DDSImage.hpp  GPUDataUploader.cpp  GPUDataUploader.hpp  Host.cpp  Host.hpp  Image.cpp  Image.hpp  Log.cpp  Log.hpp  Settings.cpp  Settings.hpp  ShaderList.cpp.in  ShaderList.hpp.in  ShadowmapAllocator.cpp  ShadowmapAllocator.hpp  ShadowmapSize.hpp  Shadowmapper.cpp  Shadowmapper.hpp  SystemWindow.cpp  SystemWindow.hpp  TextOut.cpp  TextOut.hpp  TicksCounter.cpp  TicksCounter.hpp  Tonemapper.cpp  Tonemapper.hpp  WindowVulkan.cpp  (+6 more)
src/Game/shaders/: blur.frag.glsl  cubemap_shadow.frag.glsl  cubemap_shadow.geom.glsl  cubemap_shadow.vert.glsl  ssao.frag.glsl  ssao.vert.glsl  ssao_blur.frag.glsl  text.frag.glsl  text.geom.glsl  text.vert.glsl  tonemapping.frag.glsl  tonemapping.vert.glsl  triangle.frag.glsl  triangle.vert.glsl  world.frag.glsl  world.vert.glsl
src/MathLib/: CMakeLists.txt  Mat.cpp  Mat.hpp  MathConstants.hpp  Plane.hpp  Vec.hpp
src/ModelExporter/: CMakeLists.txt  main.cpp
src/shaders/: fullscreen_quad.vert.glsl  text.frag.glsl  text.vert.glsl  tonemapping.frag.glsl  triangle.frag.glsl  triangle.vert.glsl
